[project]
name = "bedtime-stories"
version = "0.1.0"
dependencies = [
    "streamlit>=1.12.0",
    "anthropic>=0.25.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "sounddevice>=0.4.0",
    "soundfile>=0.10.0",
    "numpy>=1.21.0",
    "elevenlabs>=0.2.0",
    "requests>=2.25.0",
]
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=0.21.0",
]